data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1449.wast
;; 10. **Multiple Conditional Jumps with Inconsistent Stack Conditions**:     - **Description**: Write a Wasm module with several `br_if` instructions having different stack conditions prior to the instruction. Verify stack consistency across different control paths.     - **Constraint Checked**: Consistent stack state management.     - **Relation to Stack Corruption**: Detects alteration of stack state through varied conditional control flows with `br_if`.

(assert_invalid
  (module 
    (func $label-relative-lookup
      (block $outer (result i32)
        (block $inner (result i32)
          (block $innermost (result i32)
            (br_if 0 (i32.const 0))
            (br_if 1 (i32.const 1))
            (br_if 2 (i32.const 0) (i32.const 42))
          )
          (i32.const 0)
        )
        (drop)
      )
    )
  )
  "type mismatch"
)